<resources>
    <string name="app_name">Project Plateformes Mobiles</string>

    <string name="Valider">Valider</string>
    <string name="Continue">Continuer</string>

    <string name="back">return</string>
    <string name="close">Fermer</string>

    <string name="loading">Chargement...</string>

    <!-- Strings related to login -->
    <string name="login_activity">Login activity</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">Bienvenue</string>
    <string name="invalid_username">Ce n\'est pas un nom d\'utilisateur valide</string>
    <string name="invalid_password">Le mot de passe doit avoir au moins 5 caractères</string>
    <string name="login_failed">Impossible de se connecter</string>
    <string name="title_activity_account_creation">AccountCreation</string>

    <!-- Strings related to account creation -->
    <string name="create_account">Créer un compte</string>
    <string name="name">Nom</string>
    <string name="surname">Prénom</string>
    <string name="email">E-mail</string>
    <string name="confirm_password">Confirmer le mote de passe</string>
    <string name="confirm">Confirmer</string>
    <string name="cancel">Annuler</string>

    <!-- Strings related to Home -->
    <string name="Home_title">Mes recettes</string>
    <string name="menu">Menu</string>

    <!-- Strings related to newRecipe -->
    <string name="newRecipe">Nouvelle Recette</string>
    <string name="addPicture">Ajouter une photo</string>
    <string name="addDescription">Ajouter une description</string>
    <string name="addIngredient">Ajouter un ingrédient</string>
    <string name="addEtape">Ajouter une étape</string>

    <!-- Strings related to newRecipe -->
    <string name="cancelString">Etes-vous sûre de vouloir annuler ?</string>
    <string name="addTitle">Ajouter un Titre</string>

    <!-- Strings related to userPopup -->
    <string name="logout">Déconnexion</string>

    <!-- Strings related to settings -->
    <string name="settings">Paramètres</string>

    <!-- Strings related to account -->
    <string name="account">Compte</string>

    <!-- Strings related to photoPopup -->
    <string name="takePicture">Prendre une photo</string>
    <string name="choosePicture">Choisir une photo de la galerie</string>

    <!-- Strings related to IngredientPopup -->
    <string name="Quantity">Quantité</string>
    <string name="Unity">Unité</string>
    <string name="delete">Supprimer</string>

    <!-- Strings related to Recipe -->
    <string name="Play">play</string>
    <string name="Description">Description</string>
    <string name="Ingredients">Ingrédients</string>
    <string name="Steps">Étapes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Share">Partager</string>


    <!-- Strings related to Play Mode -->
    <string name="previousStep">Étape précedente</string>
    <string name="nextStep">Étape suivante</string>
    <string name="Finish">Terminer la recette</string>


<!-- Strings related to Edit Recipe -->
    <string name="edit_Recipe">Modification de la recette</string>



    <string name="facebook_app_id">640209680403991</string>
    <string name="fb_login_protocol_scheme">fb640209680403991</string>
    <string name="facebook_client_token">b075c5460ca294942f3e7a757e430633</string>
    <string-array name="array_time">
        <item>Secondes</item>
    </string-array>

</resources>