<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.accountCreation.AccountCreation">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/accountCreationAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ProjectPlateformesMobiles.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:popupTheme="@style/Theme.ProjectPlateformesMobiles.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/create_account"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vert_field_separation"
        android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountCreationAppBar"
        />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vert_field_separation"
        android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="text"
        android:hint="@string/surname"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vert_field_separation"
        android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vert_field_separation"
        android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vert_field_separation"
        android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
        android:background="@drawable/rounded_edittext"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:minHeight="48dp"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:selectAllOnFocus="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/NewAccountAppBarBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bottom_navigation"
        android:theme="@style/Theme.ProjectPlateformesMobiles.AppBarOverlay"
        app:elevation="0dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginEnd="16dp">

                <Button
                    android:id="@+id/CancelNewAccount"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@drawable/light_button"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_green" />

                <Button
                    android:id="@+id/ConfirmNewAccount"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/bottom_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@drawable/plain_button"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>