<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semiTransparent">

    <Button
        android:id="@+id/backPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_popup"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:elevation="10dp"
        android:layout_centerVertical="true"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/accountButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="@string/account"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/dark_green" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="@string/settings"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/dark_green" />

            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/dark_green" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</RelativeLayout>