<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newRecipeRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".NewRecipe">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/RecipeAppBarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ProjectPlateformesMobiles.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/recipe_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/back_button"
                    android:text="@string/back"
                    android:textSize="0sp"
                    android:scaleX="0.3"
                    android:scaleY=".6"
                    android:layout_gravity="center_vertical"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:id="@+id/RecipeToolBarTitle"
                        android:layout_width="wrap_content"
                        android:maxWidth="300dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/loading"
                        android:textAlignment="textStart"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        android:layout_weight="1"
                         />

                    <Button
                        android:id="@+id/play_button"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:background="@drawable/play_button"
                        android:text="@string/Play"
                        android:textSize="0sp"
                        android:layout_gravity="center_vertical"
                        />

                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RecipeAppBarTop"
        app:layout_constraintBottom_toTopOf="@id/RecipeAppBarBottom">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/RecipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_padding"
                    android:text="@string/Description"
                    android:textSize="@dimen/RecipeActivitySubTitle" />

                <TextView
                    android:id="@+id/RecipeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/RecipeMargin"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/RecipeActivityDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_padding"
                    android:text="@string/Ingredients"
                    android:textSize="@dimen/RecipeActivitySubTitle" />

                <GridLayout
                    android:id="@+id/RecipeIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill"
                    android:columnCount="4" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/horizontal_padding"
                    android:text="@string/Steps"
                    android:textSize="@dimen/RecipeActivitySubTitle" />

                <LinearLayout
                    android:id="@+id/RecipesSteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />


                <Button
                    android:id="@+id/share"
                    android:layout_width="31dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/share_button"
                    android:padding="@dimen/closeButtonPadding"
                    android:text="@string/Share"
                    android:textSize="0dp"
                    tools:ignore="TouchTargetSizeCheck" />


            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/RecipeAppBarBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ProjectPlateformesMobiles.AppBarOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bottom_navigation"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginEnd="@dimen/bottom_parent_margin"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>