<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semiTransparent">

    <Button
        android:id="@+id/backPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_popup"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:elevation="10dp"
        android:layout_centerVertical="true"
        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/vert_field_separation"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/addIngredient"
                android:padding="@dimen/horizontal_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/addQuantityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/vert_field_separation"
                    android:layout_marginEnd="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/Quantity"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/horizontal_padding"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/addUnityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vert_field_separation"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="2"
                    android:background="@drawable/rounded_edittext"
                    android:hint="@string/Unity"
                    android:maxLines="1"
                    android:padding="@dimen/horizontal_padding"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/deleteNewIngredientPopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/light_button"
                    android:paddingHorizontal="@dimen/fab_margin"
                    android:text="@string/delete"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_green" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"></Space>

                <Button
                    android:id="@+id/confirmNewRecipePopup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/plain_button"
                    android:paddingHorizontal="@dimen/fab_margin"
                    android:text="@string/confirm"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</RelativeLayout>