<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/semiTransparent">

    <Button
        android:id="@+id/backPopup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_popup"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:elevation="10dp"
        android:layout_centerVertical="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/addStepTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/vert_field_separation"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/addTitle"
                android:padding="@dimen/horizontal_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:id="@+id/addStepScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addStepTitleEditText">
                <GridLayout
                    android:id="@+id/addStepGrid"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/vert_field_separation"
                    android:padding="@dimen/horizontal_padding">

                </GridLayout>
            </ScrollView>

            <EditText
                android:id="@+id/addStepDescriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="70dp"
                android:layout_marginTop="@dimen/vert_field_separation"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/addDescription"
                android:padding="@dimen/horizontal_padding"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addStepScrollView" />

            <Button
                android:id="@+id/confirmNewStepPopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="@dimen/vert_field_separation"
                android:background="@drawable/plain_button"
                android:paddingHorizontal="@dimen/fab_margin"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addStepDescriptionEditText"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>
</RelativeLayout>